--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="recipePic"></div>
                 <div class="details">
                     <span>Poisson cru à la tahitienne</span>
-                    <i class="far fa-clock"></i><strong>10 min</strong>
+                    <i class="far fa-clock"></i><strong>60 min</strong>
                 </div>
                 <div class="moreDetails">
                     <div class="amount">
@@ -67,11 +67,32 @@
                         </ul>
                     </div>
                     <div class="making">
-                        <p>Découper le thon en dés, mettre<br> dans un plat et recouvrir de jus<br> de citron vert (mieux vaut<br> prendre un plat large et peu<br> profond). Laisser reposer au <br> réfrigérateur au moins 2 heures. <br>...</p>
+                        <p>Découper le thon en dés, mettre<br> dans un plat et recouvrir de jus<br> de citron vert (mieux vaut<br> prendre un plat large et peu<br> profond). Laisser reposer au<br> réfrigérateur au moins 2 heures.<br>...</p>
                     </div>
                 </div>
             </div>
-            <div></div>
+            <div class="chicken">
+                <div class="recipePic"></div>
+                <div class="details">
+                    <span>Poulet coco réunionnais</span>
+                    <i class="far fa-clock"></i><strong>80 min</strong>
+                </div>
+                <div class="moreDetails">
+                    <div class="amount">
+                        <ul>
+                            <li><strong>Poulet</strong>: 1</li>
+                            <li><strong>Lait de coco</strong>: 400ml</li>
+                            <li><strong>Coulis de tomate</strong>: 25cl</li>
+                            <li><strong>Oignon</strong>: 1</li>
+                            <li><strong>Poivron Rouge</strong>: 1</li>
+                            <li><strong>Huile d'olive</strong></li>
+                        </ul>
+                    </div>
+                    <div class="making">
+                        <p>Découper le poulet en<br> en morceaux, les faire dorer dans<br> une cocotte avec de l'huile<br> d'olive. Salez et poivrez. Une<br>  fois doré, laisser cuire en<br> ajoutant de l'eau. Au bout de 30<br>minutes, ajouter le coulis de<br> de tomate, ...</p>
+                    </div>
+                </div>
+            </div>
             <div></div>
             <div></div>
             <div></div>
