--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="utensils"><p>Ustensiles</p><button><i class="fas fa-chevron-down"></i></button></div>
             </div>
         </section>
-        <section class="recipes">
+        <section class="recipes" id="recipes-block" onload="showRecipes(recipes)">
             <div class="item-plats">
                 <div class="recipePic"></div>
                 <div class="details">
@@ -60,7 +60,7 @@
                     </div>    
                 </div>
             </div>
-            <div class="item-plats">
+            <!--<div class="item-plats">
                 <div class="recipePic"></div>
                 <div class="details">
                     <div class="detail-top">
@@ -146,7 +146,7 @@
                         <div class="making"></div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </section>
     </div>
     <script type="text/javascript" src="js/algo.js"></script>
