--- a/index.html
+++ b/index.html
@@ -60,95 +60,8 @@
                     </div>    
                 </div>
             </div>
-            <!--<div class="item-plats">
-                <div class="recipePic"></div>
-                <div class="details">
-                    <div class="detail-top">
-                        <span>Poisson cru à la tahitienne</span>
-                        <i class="far fa-clock"></i><strong>60 min</strong>
-                    </div>
-                    <div class="detail-bottom">
-                        <div class="amount">
-                            <ul>
-                                <li><strong>Thon Rouge (ou blanc)</strong>: 200g</li>
-                                <li><strong>Concombre</strong>: 1</li>
-                                <li><strong>Tomate</strong>: 2</li>
-                                <li><strong>Carotte</strong>: 1</li>
-                                <li><strong>Citron vert</strong>: 5</li>
-                                <li><strong>Lait de coco</strong>: 100ml</li>
-                            </ul>
-                        </div>
-                        <div class="making">
-                            <p>Découper le thon en dés, mettre<br> dans un plat et recouvrir de jus<br> de citron vert (mieux vaut<br> prendre un plat large et peu<br> profond). Laisser reposer au<br> réfrigérateur au moins 2 heures.<br>...</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="item-plats">
-                <div class="recipePic"></div>
-                <div class="details">
-                    <div class="detail-top">
-                        <span>Poulet coco réunionnais</span>
-                        <i class="far fa-clock"></i><strong>80 min</strong>
-                    </div>
-                    <div class="detail-bottom">
-                        <div class="amount">
-                            <ul>
-                                <li><strong>Poulet</strong>: 1</li>
-                                <li><strong>Lait de coco</strong>: 400ml</li>
-                                <li><strong>Coulis de tomate</strong>: 25cl</li>
-                                <li><strong>Oignon</strong>: 1</li>
-                                <li><strong>Poivron Rouge</strong>: 1</li>
-                                <li><strong>Huile d'olive</strong></li>
-                            </ul>
-                        </div>
-                        <div class="making">
-                            <p>Découper le poulet en<br> en morceaux, les faire dorer dans<br> une cocotte avec de l'huile<br> d'olive. Salez et poivrez. Une<br>  fois doré, laisser cuire en<br> ajoutant de l'eau. Au bout de 30<br>minutes, ajouter le coulis de<br> de tomate, ...</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="item-plats">
-                <div class="recipePic"></div>
-                <div class="details">
-                    <div class="detail-top">
-                        <span>Salade de riz</span>
-                        <i class="far fa-clock"></i><strong>50 min</strong>
-                    </div>
-                    <div class="detail-bottom">
-                        <div class="amount"></div>
-                        <div class="making"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="item-plats">
-                <div class="recipePic"></div>
-                <div class="details">
-                    <div class="detail-top">
-                        <span>Tarte au thon</span>
-                        <i class="far fa-clock"></i><strong>45 min</strong>
-                    </div>
-                    <div class="detail-bottom">
-                        <div class="amount"></div>
-                        <div class="making"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="item-plats">
-                <div class="recipePic"></div>
-                <div class="details">
-                    <div class="detail-top">
-                        <span>Tarte aux pommes</span>
-                        <i class="far fa-clock"></i><strong>50 min</strong>
-                    </div>
-                    <div class="detail-bottom">
-                        <div class="amount"></div>
-                        <div class="making"></div>
-                    </div>
-                </div>
-            </div>-->
         </section>
     </div>
-    <script type="text/javascript" src="js/algo.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
